# andriichernovv-winstars-ai-ds-test

./: README.md  pyproject.toml
task1_mnist/: README.md  demo.ipynb  requirements.txt
task1_mnist/src/classifier/: mnist_classifier.py
task1_mnist/src/data/: mnist_loader.py
task1_mnist/src/evaluatio/: metrics.py
task1_mnist/src/interfaces/: mnist_classifier_interface.py
task1_mnist/src/loaders/: mnist_loader.py
task1_mnist/src/models/: cnn_classifier.py  nn_classifier.py  rf_classifier.py
task1_mnist/src/services/: evaluation.py
task1_mnist/src/utils/: logger.py
task1_mnist/tests/: conftest.py  test_evaluation.py  test_loader.py  test_mnist_classifier.py  test_models.py
task2_animals/: README.md  demo.ipynb  requirements.txt
task2_animals/artifacts/image_model/: metadata.json
task2_animals/artifacts/text_model/: config.json  metadata.json  model.safetensors  vocab.txt
task2_animals/data/: metadata.json
task2_animals/data/manifests/: class_names.json  image_manifest.csv
task2_animals/data/text_dataset/: metadata.json  test.json  train.json  val.json
task2_animals/data/uploads/: 8126d353a503400595b39a773c92e886_images (1).jfif  a63bdf1b7d5a48fbb5a5a76591702400_Без названия.jfif
task2_animals/src/data/: dataset_service.py
task2_animals/src/pipeline/: animal_verifier.py  verify.py
task2_animals/src/text/: infer.py  train.py
task2_animals/src/text/interfaces/: text_classifier_interface.py
task2_animals/src/text/loaders/: text_dataset_loader.py
task2_animals/src/text/models/: text_classifier.py
task2_animals/src/utils/: logger.py
task2_animals/src/vision/: infer.py  train.py
task2_animals/src/vision/interfaces/: image_classifier_interface.py
task2_animals/src/vision/loaders/: animal_dataset_loader.py
task2_animals/src/vision/models/: image_classifier.py
task2_animals/tests/: conftest.py  test_animal_verifier.py  test_dataset_service.py  test_image_classifier.py  test_text_classifier.py
task_2_ner_image/: requirements.txt  test.ipynb
task_2_ner_image/src/: __init__.py
task_2_ner_image/src/ner/: __init__.py  ner_processor.py
task_2_ner_image/src/pipeline/: ner_image_pipeline.py
task_2_ner_image/src/utils/: logger.py
task_2_ner_image/src/vision/: ocr_processor.py
task_2_ner_image/tests/: conftest.py  test_ner_processor.py  test_ocr_processor.py  test_pipeline.py
