[project]
name = "winstars-ai-ds-test"
version = "0.1.0"
description = "Data Science internship test: MNIST OOP classifiers and NER-image pipeline"
authors = [
    { name = "Andrii Chernov" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
    "torchvision",
    "transformers",
    "datasets",
    "pillow",
    "matplotlib",
    "tensorflow>=2.21.0",
]

[project.optional-dependencies]

task1 = [
    "scikit-learn",
    "torch",
    "torchvision"
]

task2 = [
    "transformers",
    "datasets",
    "torchvision",
    "pillow"
]

dev = [
    "black",
    "ruff",
    "pytest",
    "jupyter"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
