[project]
name = "winstars-ai-ds-test"
version = "0.1.0"
description = "Data Science internship test: MNIST OOP classifiers and animal text-image verification pipeline"
authors = [
    { name = "Andrii Chernov" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "easyocr>=1.7.2",
    "ipywidgets>=8.1.8",
    "kaggle>=1.7.4.5",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "torch>=2.10.0",
]

[project.optional-dependencies]

task1 = [
    "scikit-learn",
    "torch",
    "torchvision"
]

task2 = [
    "torch",
    "torchvision",
    "pillow",
    "transformers",
    "ipywidgets"
]

dev = [
    "black",
    "ruff",
    "pytest",
    "jupyter"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
